# shadergen

./: Cargo.toml  README.md  default_frag.glsl  grammar.bnf  index.html  shadergen-c8935faf72e84fa2.js  shadergen-c8935faf72e84fa2_bg.wasm  shadergen-cab6bd9620c6aeb6.js  shadergen-cab6bd9620c6aeb6_bg.wasm  sw.js  viewport_tri_vertex.glsl
src/: funcgen.rs  generator.rs  main.rs  parser.rs  render_to_tex.rs  ui.rs  viewport_quad.rs
src/tokeniser/: general.rs  grammar_tokens.rs  mod.rs
