[package]
name = "shadergen"
version = "0.1.0"
edition = "2021"

[dependencies]
lazy_static = "1.5.0"
nom = "8.0.0"
rand = { version = "0.9.0", default_features = false }
egui_inspect = { git = "https://github.com/dmirauta/egui_inspect", branch = "0_31", features = [
  "logging",
] }
egui_extras = "0.31"
rand_chacha = "0.9.0"

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen-futures = "0.4"

[profile.release]
opt-level = 2 # fast and small wasm

# Optimize all dependencies even in debug builds:
[profile.dev.package."*"]
opt-level = 2
